--- a/5-8-23.ipynb
+++ b/5-8-23.ipynb
@@ -338,6 +338,24 @@
     "9. **Fork**: Making your own version of someone else's project on GitHub.\n",
     "10. **Issue**: A note or reminder about something to be fixed or improved in a project."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35453113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27514a99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
